Changed some images

--- a/assignment3_web/index.html
+++ b/assignment3_web/index.html
@@ -37,7 +37,7 @@
                     <button>Bay Harbor Butcher</button>
                 </div>
                 <div class="card">
-                    <img src="images/image.png" alt="Dexter Banner">
+                    <img src="images/image1pin.png" alt="Dexter Banner">
                     <h3>Card 2</h3>
                     <p>Dexter Banner</p>
                     <button>Read More</button>
@@ -52,24 +52,47 @@
         </section>
 
         <!-- Grid Layout -->
-        <section id="layout">
-            <h2>Grid Layout</h2>
-            <div class="grid-container">
-                <div class="grid-header">Header</div>
-                <div class="grid-sidebar">Sidebar</div>
-                <div class="grid-main">Main Content</div>
-                <div class="grid-footer">Footer</div>
-            </div>
-        </section>
+<section id="layout">
+    <h2>Grid Layout</h2>
+    <div class="grid-container">
+        <div class="grid-header">Zhongli</div>
+        <div class="grid-sidebar">
+            <h3>Sidebar</h3>
+            <ul>
+                <li>Rex Lapis</li>
+                <li>Geo Archon</li>
+                <li>Morax</li>
+                <li>Master of Contracts</li>
+                <li>Consultant of Wangsheng Funeral Parlor</li>
+                <li>Former God of Contracts</li>
+                <li>Former God of Geo</li>
+                <li>The God of History</li>
+            </ul>
+        </div>
+        <div class="grid-main">
+            <h3>This is my favourite character</h3>
+            <img src="images/zhongli.png" alt="Favorite Character" style="width:50%; border-radius: 5px;">
+            <p>
+            When I think about Zhongli, I don't just see a character from Genshin - I see the traits of people I've met in my own life. 
+            His personality is calm, grounded, and deeply respectful. 
+            He carries himself with patience and wisdom, the type of person who never rushes to speak but makes every word meaningful. 
+            I've known people like this: they're not loud or flashy, but their presence feels steady, almost protective, 
+            like you can lean on them when the world feels unstable.
+            </p>
+        </div>
+        <div class="grid-footer">That one who can share the memory</div> 
+    </div>
+</section>
+
 
         <!-- Image Gallery -->
         <section id="gallery">
             <h2>Image Gallery</h2>
             <div class="gallery">
-                <img src="https://ru.pinterest.com/pin/22236591907683774/" alt="Gallery 1">
-                <img src="https://ru.pinterest.com/pin/22236591907683774/" alt="Gallery 2">
-                <img src="https://ru.pinterest.com/pin/675047431687111697/" alt="Gallery 3">
-                <img src="https://ru.pinterest.com/pin/9148005493910085/ alt="Gallery 4">
+                <img src="images/gallery1.png" alt="Gallery 1">
+                <img src="images/gallery2.png" alt="Gallery 2">
+                <img src="images/gallery3.png" alt="Gallery 3">
+                <img src="images/gallery4.png" alt="Gallery 4">
             </div>
         </section>
 
@@ -91,7 +114,7 @@
                 </div>
                 <aside class="portfolio-sidebar">
                     <h3>About Me</h3>
-                    <p>Short description...</p>
+                    <p>Atalykov Sultan from SE-2423!</p>
                 </aside>
             </div>
         </section>
