--- a/assignment4_web/gallery.html
+++ b/assignment4_web/gallery.html
@@ -12,7 +12,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Chainsaw Yukine</a>
+        <a class="navbar-brand" href="index.html">Chainsaw Sultan</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
           <span class="navbar-toggler-icon"></span>
         </button>
